--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <!-- MOBILE MENU -->
             <div id="mobile-menu" class="lg:hidden hidden transition-all duration-900 ease-in-out overflow-hidden">
-                <ul class="flex flex-col space-y-4 p-5">
+                <ul class="flex flex-col gap-4 p-5">
                     <li><a href="#" class="block text-gray-700">Home</a></li>
                     <li><a href="#" class="block text-gray-700">About Us</a></li>
                     <li><a href="#" class="block text-gray-700">Contact Us</a></li>
