--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         </div>
     </nav>
 
-    <section class="lg:mt-15 relative">
+    <section class="mt-10 lg:mt-15 relative overflow-hidden h-80 md:h-96 lg:h-100">
         <div
             class="text absolute z-2 flex flex-col items-center justify-center w-full h-full px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <div class="wrp text-center">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-white text-shadow-lg">Got a place in mind,
+                <h1 class="text-3xl md:text-5xl lg:text-6xl font-bold text-white text-shadow-lg">Got a place in mind,
                     huh?</h1>
-                <p class="text-sm hidden md:text-lg md:block lg:text-xl lg:block text-white mt-4 text-shadow-sm">
+                <p class="text-sm md:text-lg md:block lg:text-xl lg:block text-white mt-4 text-shadow-sm">
                     Or just wanna go wherever the wind takes you? We gotchu — spontaneous trips make the best stories.
                 </p>
             </div>
@@ -138,7 +138,7 @@
 
     <section class="relative">
         <div
-            class="popular-destinations mt-8 md:mt-8 lg:mt-15 xl:mt-15 2xl:mt-15 px-5 md:px-15 lg:px-15 xl:px15 2xl:px-15">
+            class="popular-destinations mt-8 md:mt-8 lg:mt-15 xl:mt-15 2xl:mt-15 px-5 md:px-15 lg:px-15 xl:px-15 2xl:px-15">
             <h2 class="text-xl md:text-3xl lg:text-3xl font-semibold translate" data-en="Popular destinations right now"
                 data-id="Destinasi populer saat ini">Popular destinations right now</h2>
             <div class="mt-6 md:mt-10 lg:mt-9 xl:mt-10 2xl:mt-10">
@@ -525,18 +525,214 @@
     </section>
 
     <section>
-        <div class="inspirations mt-13 md:mt-15 lg:mt-20 xl:mt-20 2xl:mt-20 px-5 md:px-15 lg:px-15 xl:px15 2xl:px-15">
+        <!-- <div class="inspirations mt-13 md:mt-15 lg:mt-20 xl:mt-20 2xl:mt-20 px-5 md:px-15 lg:px-15 xl:px15 2xl:px-15">
             <h2 class="text-xl md:text-3xl lg:text-3xl font-semibold translate" data-en="Inspiration for your next trip"
                 data-id="Inspirasi untuk perjalanan anda selanjutnya">Inspiration for your next trip</h2>
             <div class="mt-6 md:mt-10 lg:mt-9 xl:mt-10 2xl:mt-10">
                 <div class="slider-container relative">
-                    <div class="slider-content flex items-center space-x-5 overflow-x-scroll whitespace-nowrap scroll-smooth scroll-snap-x snap-mandatory">
+                    <div
+                        class="slider-content flex items-center space-x-5 overflow-x-scroll whitespace-nowrap scroll-smooth scroll-snap-x snap-mandatory">
                         .
                     </div>
                 </div>
             </div>
+        </div> -->
+
+        <div class="mx-auto py-12 mt-5 md:mt-13 lg:mt-16 px-5 md:px-15 lg:px-15 xl:px15 2xl:px-15">
+            <div class="text-center mb-12">
+                <h1 class="textEffect text-3xl md:text-4xl lg:text-5xl font-bold text-gray-800 mb-4">Explore Beautiful Destinations
+                </h1>
+                <p class="text-sm md:text-base lg:text-sm text-gray-600 max-w-3xl mx-auto">Discover stunning travel
+                    destinations around the
+                    world with our curated gallery.</p>
+            </div>
+
+            <!-- Filter Navigation -->
+            <div class="flex flex-wrap justify-center gap-4 mb-8">
+                <button class="filter-btn active px-4 py-2 rounded-full bg-[var(--primary-color)] text-white font-medium"
+                    data-filter="all">All Destinations</button>
+                <button
+                    class="filter-btn px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 text-gray-700"
+                    data-filter="asia">Beach</button>
+                <button
+                    class="filter-btn px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 text-gray-700"
+                    data-filter="europe">Waterfall</button>
+                <button
+                    class="filter-btn px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 text-gray-700"
+                    data-filter="america">Beach Club</button>
+                <button
+                    class="filter-btn px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 text-gray-700"
+                    data-filter="beach">Culture</button>
+            </div>
+
+            <!-- Gallery Grid -->
+            <div class="gallery-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+                <!-- Destination 1 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                    <img src="https://placehold.co/800x600?text=Bali+Beach+Sunset"
+                        alt="Beautiful sunset at Bali beach with palm trees and golden sand"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">Bali, Indonesia</h3>
+                        <p class="text-sm">Tropical paradise with beautiful beaches</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.8 (256 reviews)</span>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute top-4 right-4 bg-yellow-400 text-gray-800 px-3 py-1 rounded-full text-xs font-bold">
+                        Popular</div>
+                </div>
+
+                <!-- Destination 2 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+                    <img src="https://placehold.co/800x600?text=Santorini+Greece"
+                        alt="White buildings with blue domes in Santorini overlooking the Aegean Sea"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">Santorini, Greece</h3>
+                        <p class="text-sm">Iconic whitewashed architecture</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.9 (312 reviews)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Destination 3 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                    <img src="https://placehold.co/800x600?text=Kyoto+Temples"
+                        alt="Traditional Japanese temple in Kyoto with cherry blossoms"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">Kyoto, Japan</h3>
+                        <p class="text-sm">Historic temples and gardens</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.7 (198 reviews)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Destination 4 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="america">
+                    <img src="https://placehold.co/800x600?text=New+York+Skyline"
+                        alt="New York City skyline at dusk with Empire State Building"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">New York, USA</h3>
+                        <p class="text-sm">The city that never sleeps</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.6 (421 reviews)</span>
+                        </div>
+                    </div>
+                    <div class="absolute top-4 right-4 bg-blue-500 text-white px-3 py-1 rounded-full text-xs font-bold">
+                        Featured</div>
+                </div>
+
+                <!-- Destination 5 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+                    <img src="https://placehold.co/800x600?text=Maldives+Resort"
+                        alt="Overwater bungalows in Maldives with crystal clear turquoise water"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">Maldives</h3>
+                        <p class="text-sm">Luxury overwater bungalows</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.9 (287 reviews)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Destination 6 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+                    <img src="https://placehold.co/800x600?text=Paris+Eiffel+Tower"
+                        alt="Eiffel Tower in Paris with spring flowers in foreground"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">Paris, France</h3>
+                        <p class="text-sm">Romantic city of lights</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.8 (389 reviews)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Destination 7 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                    <img src="https://placehold.co/800x600?text=Taj+Mahal"
+                        alt="Taj Mahal at sunrise with reflecting pool in Agra, India"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">Agra, India</h3>
+                        <p class="text-sm">Iconic wonder of the world</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.7 (245 reviews)</span>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute top-4 right-4 bg-green-500 text-white px-3 py-1 rounded-full text-xs font-bold">
+                        Trending</div>
+                </div>
+
+                <!-- Destination 8 -->
+                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+                    <img src="https://placehold.co/800x600?text=Bora+Bora"
+                        alt="Bora Bora island with overwater bungalows in turquoise lagoon"
+                        class="w-full h-full object-cover">
+                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                        <h3 class="text-xl font-bold mb-1">Bora Bora</h3>
+                        <p class="text-sm">Stunning tropical escape</p>
+                        <div class="flex items-center mt-2">
+                            <span class="text-yellow-300 mr-1">★</span>
+                            <span class="text-sm">4.9 (301 reviews)</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-12">
+                <button
+                    class="load-more-btn px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg shadow-md transition duration-300">
+                    Load More Destinations
+                </button>
+            </div>
         </div>
     </section>
+
+    <footer class="border-t-1 border-gray-200 pb-10">
+        <div class="footer mt-13 md:mt-15 lg:mt-20 xl:mt-20 2xl:mt-20 px-5 md:px-15 lg:px-15">
+            <div class="footer-content px-5 lg:px-35 xl:px-35 2xl:px-35 flex flex-col lg:flex-row md:flex-row justify-between space-y-5">
+                <div class="section">
+                    <img src="images/logo.svg" alt="" class="w-40 md:w-40 mb-4 lg:w-52">
+                </div>
+                <div class="sections">
+                    <h2 class="font-semibold text-xl">Pages</h1>
+                    <div class="items flex flex-col gap-2 mt-2">
+                        <p class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">Home</p>
+                        <p class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">Contact Us</p>
+                        <p class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">About Us</p>
+                        <p class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">Destinations</p>
+                        <p class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">Help</p>
+                    </div>
+                </div>
+                <div class="sections w-auto">
+                    <h2 class="font-semibold text-xl">Contact</h2>
+                    <div class="items flex flex-col gap-2 mt-2">
+                        <p class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">ajikbalitransport@gmail.com</p>
+                        <p class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">+62 812-3456-7890</p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-10">
+                <p class="text-gray-600 text-sm">&copy; 2025 Ajik Bali Transport. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 
@@ -622,6 +818,59 @@
         }
 
         startAutoSlide();
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const filterBtns = document.querySelectorAll('.filter-btn');
+            const galleryItems = document.querySelectorAll('.gallery-item');
+
+            filterBtns.forEach(btn => {
+                btn.addEventListener('click', function () {
+                    // Active button styling
+                    filterBtns.forEach(b => b.classList.remove('active', 'bg-[var(--primary-color)]', 'text-white'));
+                    filterBtns.forEach(b => b.classList.add('bg-white', 'border', 'text-gray-700'));
+
+                    this.classList.add('active', 'bg-[var(--primary-color)]', 'text-white');
+                    this.classList.remove('bg-white', 'border', 'text-gray-700');
+
+                    const filter = this.getAttribute('data-filter');
+
+                    // Filter items
+                    galleryItems.forEach(item => {
+                        if (filter === 'all' || item.getAttribute('data-category') === filter) {
+                            item.style.display = 'block';
+                        } else {
+                            item.style.display = 'none';
+                        }
+                    });
+                });
+            });
+
+            // Load more button functionality (simulated)
+            const loadMoreBtn = document.querySelector('.load-more-btn');
+            let itemsToShow = 8;
+
+            loadMoreBtn.addEventListener('click', function () {
+                // In a real implementation, this would fetch more items from a server
+                // For this demo, we'll just show an alert
+                alert('In a live implementation, this would load more destination cards from the server.');
+            });
+
+            // Animation on scroll
+            const textEffect = document.querySelector('.textEffect');
+
+            function checkScroll() {
+                const position = textEffect.getBoundingClientRect().top;
+                const screenPosition = window.innerHeight / 1.3;
+
+                if (position < screenPosition) {
+                    textEffect.classList.add('animate-pulse');
+                }
+            }
+
+            window.addEventListener('scroll', checkScroll);
+        });
     </script>
 
 </body>
