--- a/index.html
+++ b/index.html
@@ -567,134 +567,133 @@
 
             <!-- Gallery Grid -->
             <div class="gallery-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                <!-- Destination 1 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
-                    <img src="https://placehold.co/800x600?text=Bali+Beach+Sunset"
-                        alt="Beautiful sunset at Bali beach with palm trees and golden sand"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">Bali, Indonesia</h3>
-                        <p class="text-sm">Tropical paradise with beautiful beaches</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.8 (256 reviews)</span>
-                        </div>
-                    </div>
-                    <div
-                        class="absolute top-4 right-4 bg-yellow-400 text-gray-800 px-3 py-1 rounded-full text-xs font-bold">
-                        Popular</div>
-                </div>
+      <!-- Destination 1 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/71bc68ae-8bd9-4f5d-8f91-3dfcd7c87c2b.png"
+          alt="Beautiful sunset at Bali beach with palm trees and golden sand" class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">Bali, Indonesia</h3>
+          <p class="text-sm">Tropical paradise with beautiful beaches</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.8 (256 reviews)</span>
+          </div>
+        </div>
+        <div class="absolute top-4 right-4 bg-yellow-400 text-gray-800 px-3 py-1 rounded-full text-xs font-bold">Popular
+        </div>
+      </div>
 
-                <!-- Destination 2 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
-                    <img src="https://placehold.co/800x600?text=Santorini+Greece"
-                        alt="White buildings with blue domes in Santorini overlooking the Aegean Sea"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">Santorini, Greece</h3>
-                        <p class="text-sm">Iconic whitewashed architecture</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.9 (312 reviews)</span>
-                        </div>
-                    </div>
-                </div>
+      <!-- Destination 2 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6313fc7c-cbe5-46e8-a442-e2cc6c9bdbb3.png"
+          alt="White buildings with blue domes in Santorini overlooking the Aegean Sea"
+          class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">Santorini, Greece</h3>
+          <p class="text-sm">Iconic whitewashed architecture</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.9 (312 reviews)</span>
+          </div>
+        </div>
+      </div>
 
-                <!-- Destination 3 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
-                    <img src="https://placehold.co/800x600?text=Kyoto+Temples"
-                        alt="Traditional Japanese temple in Kyoto with cherry blossoms"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">Kyoto, Japan</h3>
-                        <p class="text-sm">Historic temples and gardens</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.7 (198 reviews)</span>
-                        </div>
-                    </div>
-                </div>
+      <!-- Destination 3 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/da0fc06e-0706-4a03-b535-a461df58d3a6.png"
+          alt="Traditional Japanese temple in Kyoto with cherry blossoms" class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">Kyoto, Japan</h3>
+          <p class="text-sm">Historic temples and gardens</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.7 (198 reviews)</span>
+          </div>
+        </div>
+      </div>
 
-                <!-- Destination 4 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="america">
-                    <img src="https://placehold.co/800x600?text=New+York+Skyline"
-                        alt="New York City skyline at dusk with Empire State Building"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">New York, USA</h3>
-                        <p class="text-sm">The city that never sleeps</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.6 (421 reviews)</span>
-                        </div>
-                    </div>
-                    <div class="absolute top-4 right-4 bg-blue-500 text-white px-3 py-1 rounded-full text-xs font-bold">
-                        Featured</div>
-                </div>
+      <!-- Destination 4 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="america">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4944da08-fc27-42a4-b91b-362ac7d04faa.png"
+          alt="New York City skyline at dusk with Empire State Building" class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">New York, USA</h3>
+          <p class="text-sm">The city that never sleeps</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.6 (421 reviews)</span>
+          </div>
+        </div>
+        <div class="absolute top-4 right-4 bg-blue-500 text-white px-3 py-1 rounded-full text-xs font-bold">Featured
+        </div>
+      </div>
 
-                <!-- Destination 5 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
-                    <img src="https://placehold.co/800x600?text=Maldives+Resort"
-                        alt="Overwater bungalows in Maldives with crystal clear turquoise water"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">Maldives</h3>
-                        <p class="text-sm">Luxury overwater bungalows</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.9 (287 reviews)</span>
-                        </div>
-                    </div>
-                </div>
+      <!-- Destination 5 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/1c882467-347e-4f0b-88a1-c07d65d9bc57.png"
+          alt="Overwater bungalows in Maldives with crystal clear turquoise water" class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">Maldives</h3>
+          <p class="text-sm">Luxury overwater bungalows</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.9 (287 reviews)</span>
+          </div>
+        </div>
+      </div>
 
-                <!-- Destination 6 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
-                    <img src="https://placehold.co/800x600?text=Paris+Eiffel+Tower"
-                        alt="Eiffel Tower in Paris with spring flowers in foreground"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">Paris, France</h3>
-                        <p class="text-sm">Romantic city of lights</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.8 (389 reviews)</span>
-                        </div>
-                    </div>
-                </div>
+      <!-- Destination 6 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/ff5896f8-ed07-48d5-b509-77b3a502932d.png"
+          alt="Eiffel Tower in Paris with spring flowers in foreground" class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">Paris, France</h3>
+          <p class="text-sm">Romantic city of lights</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.8 (389 reviews)</span>
+          </div>
+        </div>
+      </div>
 
-                <!-- Destination 7 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
-                    <img src="https://placehold.co/800x600?text=Taj+Mahal"
-                        alt="Taj Mahal at sunrise with reflecting pool in Agra, India"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">Agra, India</h3>
-                        <p class="text-sm">Iconic wonder of the world</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.7 (245 reviews)</span>
-                        </div>
-                    </div>
-                    <div
-                        class="absolute top-4 right-4 bg-green-500 text-white px-3 py-1 rounded-full text-xs font-bold">
-                        Trending</div>
-                </div>
+      <!-- Destination 7 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fea06b45-1a78-46c8-8107-6b21f620ce4a.png"
+          alt="Taj Mahal at sunrise with reflecting pool in Agra, India" class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">Agra, India</h3>
+          <p class="text-sm">Iconic wonder of the world</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.7 (245 reviews)</span>
+          </div>
+        </div>
+        <div class="absolute top-4 right-4 bg-green-500 text-white px-3 py-1 rounded-full text-xs font-bold">Trending
+        </div>
+      </div>
 
-                <!-- Destination 8 -->
-                <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
-                    <img src="https://placehold.co/800x600?text=Bora+Bora"
-                        alt="Bora Bora island with overwater bungalows in turquoise lagoon"
-                        class="w-full h-full object-cover">
-                    <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                        <h3 class="text-xl font-bold mb-1">Bora Bora</h3>
-                        <p class="text-sm">Stunning tropical escape</p>
-                        <div class="flex items-center mt-2">
-                            <span class="text-yellow-300 mr-1">★</span>
-                            <span class="text-sm">4.9 (301 reviews)</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <!-- Destination 8 -->
+      <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+        <img
+          src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/2bfe5fb7-b187-4897-b342-d8d6bae002df.png"
+          alt="Bora Bora island with overwater bungalows in turquoise lagoon" class="w-full h-full object-cover">
+        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+          <h3 class="text-xl font-bold mb-1">Bora Bora</h3>
+          <p class="text-sm">Stunning tropical escape</p>
+          <div class="flex items-center mt-2">
+            <span class="text-yellow-300 mr-1">★</span>
+            <span class="text-sm">4.9 (301 reviews)</span>
+          </div>
+        </div>
+      </div>
+    </div>
 
             <div class="text-center mt-12">
                 <button
