--- a/about.html
+++ b/about.html
@@ -85,10 +85,10 @@
         </div>
     </nav>
 
-    <section class="mt-22 md:mt-30 lg:mt-30">
+    <section class="mt-24 md:mt-30 lg:mt-30">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
-            <div class="mb-10">
-                <h2 class="text-xl md:text-3xl lg:text-3xl font-semibold translate" data-en="More about us"
+            <div class="mb-7">
+                <h2 class="text-3xl font-semibold translate" data-en="More about us"
                     data-id="Lebih banyak tentang kami">More about us</h2>
                 <div class="w-15 h-[2px] md:h-[3px] lg:w-20 lg:h-1 bg-[var(--secondary-color)]"></div>
             </div>
@@ -133,7 +133,7 @@
     <section class="mt-22 md:mt-30 lg:mt-25">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <div class="text-center mb-16">
-                <h2 class="text-3xl font-bold mb-4">Meet Our Team</h2>
+                <h2 class="text-3xl font-semibold mb-4">Meet Our Team</h2>
                 <div class="w-15 h-[2px] md:h-[3px] lg:w-20 lg:h-1 bg-[var(--secondary-color)] mx-auto"></div>
                 <p class="text-gray-600 max-w-2xl mx-auto mt-4">The brilliant minds behind our success</p>
             </div>
