--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             <div id="mobile-menu" class="lg:hidden hidden transition-all duration-900 ease-in-out overflow-hidden">
                 <ul class="flex flex-col gap-4 p-5">
                     <li><a href="index.html" class="block text-gray-700">Home</a></li>
-                    <li><a href="about.html" class="block text-gray-700">About Us</a></li>
+                    <li><a href="about.html" class="block text-gray-700 active">About Us</a></li>
                     <li><a href="contact.html" class="block text-gray-700">Contact Us</a></li>
                     <li><a href="destinations.html" class="block text-gray-700">Destinations</a></li>
                     <li><a href="help.html" class="block text-gray-700">Help</a></li>
