--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             <!-- Filter Navigation -->
             <div class="flex flex-wrap justify-center gap-4 mb-8">
                 <button
-                    class="filter-btn cursor-pointer active px-4 py-2 rounded-full bg-[var(--primary-color)] text-white font-medium"
+                    class="filter-btn cursor-pointer active px-4 py-2 rounded-full bg-[var(--primary-color)] text-white border border-gray-300"
                     data-filter="all">All Destinations</button>
                 <button
                     class="filter-btn cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 text-gray-700"
