--- a/about.html
+++ b/about.html
@@ -100,7 +100,8 @@
                 </div>
                 <div class="md:w-full lg:w-1/2 h-1/2">
                     <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed">
-                        Welcome to <strong class="text-[var(--primary-color)]">Ajik Bali Travel!</strong> We are a travel agent dedicated to providing a comfortable, safe,
+                        Welcome to <strong class="text-[var(--primary-color)]">Ajik Bali Travel!</strong> We are a
+                        travel agent dedicated to providing a comfortable, safe,
                         and enjoyable travel experience for every guest. With our experienced team, we are ready to be
                         your trusted partner in exploring various destinations of your choice.
                     </p>
@@ -116,19 +117,19 @@
                         complications — just one click, and your journey begins with us.
                     </p>
                     <div class="flex justify-between text-center mt-10">
-                        <div>
-                            <div class="text-2xl md:text-3xl font-bold text-[var(--primary-color)]">8+</div>
-                            <div class="text-sm md:text-base text-gray-500">Years Experience</div>
-                        </div>
-                        <div>
-                            <div class="text-2xl md:text-3xl font-bold text-[var(--primary-color)]">900+</div>
-                            <div class="text-sm md:text-base text-gray-500">Destinations Served</div>
-                        </div>
-                        <div>
-                            <div class="text-2xl md:text-3xl font-bold text-[var(--primary-color)]">1000+</div>
-                            <div class="text-sm md:text-base text-gray-500">Satisfied Clients</div>
-                        </div>
-                    </div>
+    <div>
+        <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]" data-target="8">0</div>
+        <div class="text-sm md:text-base text-gray-500">Years Experience</div>
+    </div>
+    <div>
+        <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]" data-target="900">0</div>
+        <div class="text-sm md:text-base text-gray-500">Destinations Served</div>
+    </div>
+    <div>
+        <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]" data-target="1000">0</div>
+        <div class="text-sm md:text-base text-gray-500">Satisfied Clients</div>
+    </div>
+</div>
                 </div>
             </div>
         </div>
@@ -207,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -257,6 +258,45 @@
     </footer>
 
     <script src="script.js"></script>
+
+    <script>
+    const counters = document.querySelectorAll('.counter');
+    const duration = 2000; // durasi semua counter (ms)
+
+    const observer = new IntersectionObserver((entries, observer) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                counters.forEach(counter => {
+                    const target = +counter.getAttribute('data-target');
+                    const start = 0;
+                    const startTime = performance.now();
+
+                    const animate = (time) => {
+                        const elapsed = time - startTime;
+                        const progress = Math.min(elapsed / duration, 1);
+                        const value = Math.floor(progress * (target - start) + start);
+
+                        counter.innerText = value;
+
+                        if (progress < 1) {
+                            requestAnimationFrame(animate);
+                        } else {
+                            counter.innerText = target + '+';
+                        }
+                    };
+
+                    requestAnimationFrame(animate);
+                });
+
+                observer.disconnect();
+            }
+        });
+    }, { threshold: 0.5 });
+
+    counters.forEach(counter => {
+        observer.observe(counter);
+    });
+</script>
 </body>
 
 </html>
