--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
+
 <body>
     <nav class="w-full">
         <div id="navbar"
@@ -85,24 +87,65 @@
 
     <section class="mt-24 md:mt-30 lg:mt-30">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 w-full gap-10">
+            <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 w-full gap-10 items-start">
                 <div class="img overflow-hidden max-w-full max-h-full">
-                    <img src="images/help.jpg" alt="" class="w-full h-full object-cover">
+                    <img src="images/help.jpg" alt="" class="w-full h-full object-contain">
                 </div>
                 <div class="content">
                     <div class="lg:mt-10">
                         <div class="spr mb-8">
                             <details class="border-b-1 border-gray-300 pb-4">
-                                <summary class="font-semibold text-xl cursor-pointer">How can I order a destinations ticket?</summary>
-                                <p>You can book your ticket via WhatsApp by contacting the admin using the number provided on the website. There, you'll be directed and guided.</p>
+                                <summary class="font-semibold text-base md:text-xl cursor-pointer">How do I make a booking?</summary>
+                                <p class="text-sm md:text-base">You can book your travel ticket through our by contacting us via WhatsApp.
+                                    Our team will assist you with the process.</p>
                             </details>
                         </div>
+
                         <div class="spr mb-8">
                             <details class="border-b-1 border-gray-300 pb-4">
-                                <summary class="font-semibold text-xl cursor-pointer">Is the driver experienced?</summary>
-                                <p>Yes, our drivers have years of experience, having served many customers out there!</p>
+                                <summary class="font-semibold text-base md:text-xl cursor-pointer">Do you offer airport transfer
+                                    services?</summary>
+                                <p class="text-sm md:text-base">Yes, we provide reliable and punctual airport pickup and drop-off services to ensure
+                                    your journey starts and ends smoothly.</p>
                             </details>
                         </div>
+
+                        <div class="spr mb-8">
+                            <details class="border-b-1 border-gray-300 pb-4">
+                                <summary class="font-semibold text-base md:text-xl cursor-pointer">Can I customize my travel
+                                    itinerary?</summary>
+                                <p class="text-sm md:text-base">Absolutely! We offer flexible travel packages that can be tailored to your preferred
+                                    destinations and schedules.</p>
+                            </details>
+                        </div>
+
+                        <div class="spr mb-8">
+                            <details class="border-b-1 border-gray-300 pb-4">
+                                <summary class="font-semibold text-base md:text-xl cursor-pointer">What payment methods are
+                                    available?</summary>
+                                <p class="text-sm md:text-base">We accept payments via bank transfer, credit card, and digital wallets. Please
+                                    contact our support team for details.</p>
+                            </details>
+                        </div>
+
+                        <div class="spr mb-8">
+                            <details class="border-b-1 border-gray-300 pb-4">
+                                <summary class="font-semibold text-base md:text-xl cursor-pointer">Is it safe to travel with your
+                                    agency?</summary>
+                                <p class="text-sm md:text-base">Yes, safety is our top priority. All our vehicles are regularly maintained, and our
+                                    drivers are experienced professionals.</p>
+                            </details>
+                        </div>
+
+                        <div class="spr mb-8">
+                            <details class="border-b-1 border-gray-300 pb-4">
+                                <summary class="font-semibold text-base md:text-xl cursor-pointer">Do you offer group discounts?
+                                </summary>
+                                <p class="text-sm md:text-base">Yes, we provide special discounts for group bookings. Contact us for a customized
+                                    quote based on your group size.</p>
+                            </details>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -110,5 +153,33 @@
     </section>
 
     <script src="script.js"></script>
+
+    <script>
+        document.querySelectorAll("details").forEach((detail) => {
+    detail.addEventListener("toggle", function () {
+        const content = this.querySelector("p");
+        if (this.open) {
+            content.style.height = "0px";
+            content.style.overflow = "hidden";
+            content.style.transition = "height 0.3s ease";
+            requestAnimationFrame(() => {
+                content.style.height = content.scrollHeight + "px";
+            });
+            setTimeout(() => {
+                content.style.height = "auto";
+                content.style.overflow = "visible";
+            }, 300);
+        } else {
+            content.style.height = content.scrollHeight + "px";
+            content.style.overflow = "hidden";
+            requestAnimationFrame(() => {
+                content.style.height = "0px";
+            });
+        }
+    });
+});
+
+    </script>
 </body>
+
 </html>
