--- a/destinations.html
+++ b/destinations.html
@@ -161,7 +161,7 @@
     <section class="mt-24 md:mt-35 lg:mt-40">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <button id="toggle-nav"
-                class="button-navigasi-phone fixed top-4 md:top-25 left-4 z-50 bg-blue-500 text-white p-2 rounded-md lg:hidden">
+                class="button-navigasi-phone fixed top-4 md:top-25 left-4 z-50 bg-[var(--secondary-color)] text-white p-2 rounded-md lg:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path fill="currentColor"
                         d="M15 19.88c.04.3-.06.62-.29.83a.996.996 0 0 1-1.41 0L9.29 16.7a.99.99 0 0 1-.29-.83v-5.12L4.21 4.62a1 1 0 0 1 .17-1.4c.19-.14.4-.22.62-.22h14c.22 0 .43.08.62.22a1 1 0 0 1 .17 1.4L15 10.75zM7.04 5L11 10.06v5.52l2 2v-7.53L16.96 5z" />
@@ -169,13 +169,13 @@
             </button>
             <div class="grid grid-cols-1 lg:grid-cols-[2fr_8fr] gap-5 w-full">
                 <div id="sidebar"
-                    class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-7 py-5 z-40">
+                    class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-5 lg:pr-7 lg:pl-0 py-5 lg:pb-5 lg:pt-0 z-40">
                     <h1 class="text-xl md:text-2xl font-semibold translate mt-20 md:mt-40 lg:mt-0" data-id="Saring"
                         data-en="Filter">Saring
                     </h1>
-                    <div class="flex flex-wrap justify-start gap-4 mb-8 mt-7">
+                    <div class="border-gray-300 pb-5 border-b-[1px] flex flex-wrap justify-start gap-4 mb-8 mt-7">
                         <button
-                            class="filter-btn cursor-pointer active px-4 py-2 rounded-full bg-[var(--primary-color)] text-white border border-gray-300 translate"
+                            class="filter-btn cursor-pointer active px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-[var(--primary-color)] text-white border border-gray-300 translate"
                             data-filter="all" data-en="All destinations" data-id="Semua destinasi">All
                             Destinations</button>
                         <button
@@ -191,10 +191,48 @@
                             class="filter-btn cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
                             data-filter="beach" data-en="Culture" data-id="Budaya">Culture</button>
                     </div>
+
+                    <div class="">
+                        <h1 class="text-xl md:text-2xl font-semibold translate lg:mt-0" data-id="Wilayah"
+                        data-en="Region">Wilayah
+                    </div>
+                    <div class="flex flex-wrap justify-start gap-4 mb-8 mt-7">
+                        <button
+                            class="filter-btn-2 cursor-pointer active px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-[var(--secondary-color)] text-white border border-gray-300 translate"
+                            data-filter="all" data-en="All regions" data-id="Semua wilayah">All
+                            regions</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="buleleng" data-en="Buleleng" data-id="Buleleng">Buleleng</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="tabanan" data-en="Tabanan" data-id="Tabanan">Tabanan</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="badung" data-en="Badung" data-id="Badung">Badung</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="gianyar" data-en="Gianyar" data-id="Gianyar">Gianyar</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="bangli" data-en="Bangli" data-id="Bangli">Bangli</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="klungkung" data-en="Klungkung" data-id="Klungkung">Klungkung</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="jembrana" data-en="Jembrana" data-id="Jembrana">Jembrana</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="karangasem" data-en="Karangasem" data-id="Karangasem">Karangasem</button>
+                        <button
+                            class="filter-btn-2 cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="denpasar" data-en="Denpasar" data-id="Denpasar">Denpasar</button>
+                    </div>
                 </div>
                 <div class="w-full gallery-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                     <!-- Destination 1 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia" data-region="buleleng">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/71bc68ae-8bd9-4f5d-8f91-3dfcd7c87c2b.png"
                             alt="Beautiful sunset at Bali beach with palm trees and golden sand"
                             class="w-full h-full object-cover">
@@ -215,7 +253,7 @@
                     </div>
 
                     <!-- Destination 2 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe" data-region="tabanan">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6313fc7c-cbe5-46e8-a442-e2cc6c9bdbb3.png"
                             alt="White buildings with blue domes in Santorini overlooking the Aegean Sea"
                             class="w-full h-full object-cover">
@@ -232,7 +270,7 @@
                     </div>
 
                     <!-- Destination 3 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia" data-region="bangli">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/da0fc06e-0706-4a03-b535-a461df58d3a6.png"
                             alt="Traditional Japanese temple in Kyoto with cherry blossoms"
                             class="w-full h-full object-cover">
@@ -250,7 +288,7 @@
 
                     <!-- Destination 4 -->
                     <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80"
-                        data-category="america">
+                        data-category="america" data-region="karangasem">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4944da08-fc27-42a4-b91b-362ac7d04faa.png"
                             alt="New York City skyline at dusk with Empire State Building"
                             class="w-full h-full object-cover">
@@ -271,7 +309,7 @@
                     </div>
 
                     <!-- Destination 5 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach" data-region="jembrana">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/1c882467-347e-4f0b-88a1-c07d65d9bc57.png"
                             alt="Overwater bungalows in Maldives with crystal clear turquoise water"
                             class="w-full h-full object-cover">
@@ -288,7 +326,7 @@
                     </div>
 
                     <!-- Destination 6 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe" data-region="klungkung">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/ff5896f8-ed07-48d5-b509-77b3a502932d.png"
                             alt="Eiffel Tower in Paris with spring flowers in foreground"
                             class="w-full h-full object-cover">
@@ -305,7 +343,7 @@
                     </div>
 
                     <!-- Destination 7 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia" data-region="badung">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fea06b45-1a78-46c8-8107-6b21f620ce4a.png"
                             alt="Taj Mahal at sunrise with reflecting pool in Agra, India"
                             class="w-full h-full object-cover">
@@ -326,7 +364,7 @@
                     </div>
 
                     <!-- Destination 8 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach" data-region="denpasar">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/2bfe5fb7-b187-4897-b342-d8d6bae002df.png"
                             alt="Bora Bora island with overwater bungalows in turquoise lagoon"
                             class="w-full h-full object-cover">
@@ -410,11 +448,11 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const filterBtns = document.querySelectorAll('.filter-btn');
+            const filterBtns2 = document.querySelectorAll('.filter-btn-2');
             const galleryItems = document.querySelectorAll('.gallery-item');
 
             filterBtns.forEach(btn => {
                 btn.addEventListener('click', function () {
-                    // Active button styling
                     filterBtns.forEach(b => b.classList.remove('active', 'bg-[var(--primary-color)]', 'text-white'));
                     filterBtns.forEach(b => b.classList.add('bg-white', 'border', 'text-gray-700'));
 
@@ -423,7 +461,6 @@
 
                     const filter = this.getAttribute('data-filter');
 
-                    // Filter items
                     galleryItems.forEach(item => {
                         if (filter === 'all' || item.getAttribute('data-category') === filter) {
                             item.style.display = 'block';
@@ -434,17 +471,33 @@
                 });
             });
 
-            // Load more button functionality (simulated)
+            filterBtns2.forEach(btn => {
+                btn.addEventListener('click', function () {
+                    filterBtns2.forEach(b => b.classList.remove('active', 'bg-[var(--secondary-color)]', 'text-white'));
+                    filterBtns2.forEach(b => b.classList.add('bg-white', 'border', 'text-gray-700'));
+
+                    this.classList.add('active', 'bg-[var(--secondary-color)]', 'text-white');
+                    this.classList.remove('bg-white', 'border', 'text-gray-700');
+
+                    const filter = this.getAttribute('data-filter');
+
+                    galleryItems.forEach(item => {
+                        if (filter === 'all' || item.getAttribute('data-region') === filter) {
+                            item.style.display = 'block';
+                        } else {
+                            item.style.display = 'none';
+                        }
+                    });
+                });
+            });
+
             const loadMoreBtn = document.querySelector('.load-more-btn');
             let itemsToShow = 8;
 
             loadMoreBtn.addEventListener('click', function () {
-                // In a real implementation, this would fetch more items from a server
-                // For this demo, we'll just show an alert
                 alert('In a live implementation, this would load more destination cards from the server.');
             });
 
-            // Animation on scroll
             const textEffect = document.querySelector('.textEffect');
 
             function checkScroll() {
